# PruebaOpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  Lightning.txt  Notas.txt
include/glad/: glad.h
res/3dObjects/: box.mtl  monkey.mtl
res/shaders/: 3dObjShader.glsl  3dOutlineShader.glsl  basic.glsl  basic.shader  boxShader.glsl  circle.glsl  cubeShader.glsl  figure.glsl  fpsShader.glsl  fragmentShader.frag  lightShader.glsl  testTexture.glsl  vertexShader.vert
res/textures/: monkey.blend  monkey.blend1
src/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  glMacros.cpp  glMacros.h  glad.c  main.cpp
src/figures/: AABB.cpp  AABB.h  Circle.cpp  Circle.h  CollisionManager.cpp  CollisionManager.h  Figure.cpp  Figure.h  ForceManager.cpp  ForceManager.h  Ray2D.cpp  Ray2D.h  Segment.h  Square.cpp  Square.h
src/tests/: Color.h  Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestCollisions.cpp  TestCollisions.h  TestFPS.cpp  TestFPS.h  TestFluid.cpp  TestFluid.h  TestHugeObject.cpp  TestHugeObject.h  TestLight.cpp  TestLight.h  TestLightTexture.cpp  TestLightTexture.h  TestPong.cpp  TestPong.h  TestTexture.cpp  TestTexture.h
src/tests/mirrorGame/: Barrier.h  Blocker.h  DoubleMirror.cpp  DoubleMirror.h  ForwardMirror.h  Grid.h  MirrorConstants.h  Mirror_End.cpp  Mirror_End.h  StartBlock.h  TestConstants.h  TestMirrors.cpp  TestMirrors.h
